--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </p>
             <div class="botoes">
                 <h2 class="botoes_subtitulo">Acesse minhas redes:</h2>
-            <a class="nxzero" href="https://github.com/likraspires">
+            <a class="nxzero" href="https://github.com/lucaspiresalb">
                 <img src="./assets/github.png">
                 Github
             </a>
