--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="./assets/instagram.png">
                 Instagram
             </a>
-            <a class="nxzero" href="https://www.linkedin.com/in/lucas-pires-4aa858180/">
+            <a class="nxzero" href="https://www.linkedin.com/in/lucas-pires-ads/">
                 <img src="./assets/linkedin.png">
                 Linkedin
             </a>
